# pretix-automated-orders

./: LICENSE  MANIFEST.in  README.rst  setup.cfg  setup.py
pretix_automated_orders/: apps.py  forms.py  signals.py  tasks.py  urls.py  views.py
pretix_automated_orders.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pretix_automated_orders/locale/de/LC_MESSAGES/: django.mo  django.po
pretix_automated_orders/locale/pt/LC_MESSAGES/: django.mo  django.po
pretix_automated_orders/templates/automated_orders/: index.html
