[metadata]
name = pretix_automated_orders
version = 1.1.7
description = Pretix plugin to create automated orders.
long_description = file: README.rst
author = Evolutio
author_email = jpires@evolutio.pt
license = BSD-3-Clause  # Example license
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 4.2.11
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires = 
	Django == 4.2.11

[flake8]
ignore = N802,W503,E402
max-line-length = 160
exclude = migrations,.ropeproject,static,_static,build

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_third_party = pretix
known_standard_library = typing
multi_line_output = 3
skip = setup.py
use_parentheses = True
force_grid_wrap = 0
line_length = 88
known_first_party = pretix_automated_orders

[tool:pytest]
DJANGO_SETTINGS_MODULE = pretix.testutils.settings

[coverage:run]
source = pretix_automated_orders
omit = */migrations/*,*/urls.py,*/tests/*

[coverage:report]
exclude_lines = 
	pragma: no cover
	def __str__
	der __repr__
	if settings.DEBUG
	NOQA
	NotImplementedError

[check-manifest]
ignore = 
	.update-locales.sh
	.install-hooks.sh
	pretixplugin.toml
	Makefile
	manage.py
	tests/*
	*.po
	.gitkeep

[egg_info]
tag_build = 
tag_date = 0

